welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: expected class or object definition
def likeASnake(){
^SnakeBuggle:20: error: expected class or object definition
def tgauche(){
^SnakeBuggle:26: error: expected class or object definition
def tdroite(){
^SnakeBuggle:33: error: expected class or object definition
def checkMur () : Boolean ={
^SnakeBuggle:49: error: Unmatched closing brace '}' ignored here
}
^